--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           node-version: "18"
       - name: Install dependencies
-        run: bun install
+        run: npm install
       - name: Run build
-        run: bun run build
+        run: npm run build
 
   deploy:
     name: deploy
@@ -32,9 +32,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "18"
-          cache: "bun"
+          cache: "npm"
       - name: Install firebase-tools
-        run: bun install --save-dev firebase-tools
+        run: npm install --save-dev firebase-tools
       - name: Decode Firebase service account key
         run: |
           echo "${{ secrets.FIREBASE_KEY }}" | base64 -d > ./firebase-key.json
