--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,6 +18,8 @@ jobs:
           bun-version: latest
       - name: Install dependencies
         run: bun install
+      - name: Run tests
+        run: bun test
       - name: Run build
         run: bun run build
 
